--- a/common.cfg
+++ b/common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 2
-UnchokingInterval 50
-OptimisticUnchokingInterval 60
-FileName input.txt
-FileSize 9729942
-PieceSize 3243314
+UnchokingInterval 5
+OptimisticUnchokingInterval 15
+FileName TheFile.dat
+FileSize 10000232
+PieceSize 32768
