--- a/common.cfg
+++ b/common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 2
 UnchokingInterval 5
 OptimisticUnchokingInterval 15
-FileName TheFile.dat
-FileSize 10000232
-PieceSize 32768
+FileName video.flv
+FileSize 39666906
+PieceSize 1000000
