Made some changes in log files

--- a/common.cfg
+++ b/common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 2
 UnchokingInterval 5
 OptimisticUnchokingInterval 15
-FileName video.flv
-FileSize 39666906
-PieceSize 1000000
+FileName video.txt
+FileSize 130
+PieceSize 50
